--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -94,10 +94,10 @@
 
                 <div class="form-right">
                     <label>Practical Lecturer</label>
-                    <input type="text" name="coursePractical" value="{{ coursePractical_text }}"><br>
+                    <input type="text" name="coursePractical" value="{{ coursePractical_text }}" required><br>
 
                     <label>Tutorial Lecturer</label>
-                    <input type="text" name="courseTutorial" value="{{ courseTutorial_text }}">
+                    <input type="text" name="courseTutorial" value="{{ courseTutorial_text }}" required>
                 </div>
             </div>
 
