--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -21,12 +21,12 @@
             <div class="profile-frame">
                 <div class="form-left">
                     <label>Department Code</label>
-                    <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
+                    <input type="text" name="departmentCode" value="{{ departmentCode_text }}" required>
                 </div>
 
                 <div class="form-right">
                     <label>Department Name</label>
-                    <input type="text" name="departmentName" value="{{ departmentName_text }}">
+                    <input type="text" name="departmentName" value="{{ departmentName_text }}" required>
                 </div>
             </div>
                  
