--- a/app/templates/frontPart/login.html
+++ b/app/templates/frontPart/login.html
@@ -28,14 +28,14 @@
             <!-- Frame for Email Address container -->
             <div class="input-container" style="width: 60%;">
                 <label>Email Address</label>
-                <input type="email" name="textbox" value="{{ login_text }}">
+                <input type="email" name="textbox" value="{{ login_text }}" required>
             </div>
             <br>
         
             <!-- Frame for Enter Password container -->
             <div class="password-container" style="width: 60%;">
                 <label>Password</label>
-                <input type="password" name="password" value="{{ password_text }}">
+                <input type="password" name="password" value="{{ password_text }}" required>
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
