--- a/app/templates/frontPart/forgotPassword.html
+++ b/app/templates/frontPart/forgotPassword.html
@@ -19,7 +19,7 @@
             <!-- Frame for Email Address container to send Email -->
             <div class="input-container" style="width: 60%;">
                 <label>Email Address</label>
-                <input type="email" name="email" value="{{ forgot_email_text }}">
+                <input type="email" name="email" value="{{ forgot_email_text }}" required>
             </div>
             <br>
 
