--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -17,21 +17,21 @@
             <div style="display: flex; flex-direction: row; justify-content: space-between; padding: 3%;">
                 <div class="form-left">
                 <label>Full Name as per IC</label>
-                <input type="text" name="username" value="{{ name_text }}"><br>
+                <input type="text" name="username" value="{{ name_text }}" required><br>
                 
                 <label>Staff ID</label>
-                <input type="text" name="userid" value="{{ id_text }}"><br>
+                <input type="text" name="userid" value="{{ id_text }}" required><br>
 
                 <label>Email Address</label>
-                <input type="text" name="email" value="{{ email_text }}"><br>
+                <input type="text" name="email" value="{{ email_text }}" required><br>
             </div>
 
             <div class="form-middle">
                 <label>Contact Number</label>
-                <input type="tel" name="contact" value="{{ contact_text }}"><br> 
+                <input type="tel" name="contact" value="{{ contact_text }}" required><br> 
 
                 <label>Role Registered as</label>
-                <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}">
+                <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}" required>
                     <option value="" disabled selected>Select Role</option>
                     <option value="LECTURER">LECTURER</option>
                     <option value="DEAN">DEAN</option>
@@ -60,7 +60,7 @@
 
                 <div class="password-container">
                     <label>Password</label>
-                    <input type="password" name="password1" value="{{ password1_text }}">
+                    <input type="password" name="password1" value="{{ password1_text }}" required>
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
@@ -68,7 +68,7 @@
     
                 <div class="password-container">
                     <label> Confirm Password</label>
-                    <input type="password" name="password2" value="{{ password2_text }}">
+                    <input type="password" name="password2" value="{{ password2_text }}" required>
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
