--- a/app/templates/frontPart/resetPassword.html
+++ b/app/templates/frontPart/resetPassword.html
@@ -26,7 +26,7 @@
         <div class="form-container">
             <div class="password-container" style="width: 60%;">
                 <label>Password</label>
-                <input type="password" name="password1" value="{{ password_text_1 }}">
+                <input type="password" name="password1" value="{{ password_text_1 }}" required>
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
@@ -34,7 +34,7 @@
 
             <div class="password-container" style="width: 60%;">
                 <label> Confirm Password</label>
-                <input type="password" name="password2" value="{{ password_text_2 }}">
+                <input type="password" name="password2" value="{{ password_text_2 }}" required>
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
