--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -27,8 +27,8 @@
                 <label for="course_list">
                     <div class="upload-container" id="courseUploadContainer">
                         <div class="upload-text">
-                            Upload a file with an empty first row. Data should start from columns A to D,<br>
-                            labeled as: 'Code', 'Section', 'Name', and 'CreditHour'<br><br><br>
+                            Upload a file with an empty first row. Data should start from columns A to G,<br>
+                            labeled as: ['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer']<br><br><br>
                             Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
