--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -23,7 +23,7 @@
                 <input type="text" name="userid" value="{{ id_text }}" required><br>
 
                 <label>Email Address</label>
-                <input type="text" name="email" value="{{ email_text }}" required><br>
+                <input type="email" name="email" value="{{ email_text }}" required><br>
             </div>
 
             <div class="form-middle">
