--- a/app/templates/adminPart/adminManageVenue.html
+++ b/app/templates/adminPart/adminManageVenue.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Manual Form -->
-    <form id="manualForm" action="{{ url_for('admin_manageDepartment') }}" method="POST">
+    <form id="manualForm" action="{{ url_for('admin_manageVenue') }}" method="POST">
         <div id="manualSection" class="function-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
@@ -45,7 +45,6 @@
                         <option value="UNAVAILABLE">UNAVAILABLE</option>
                         <option value="IN SERVICE">IN SERVICE</option>
                     </select>
-
                 </div>
             </div>
                  
