--- a/app/templates/adminPart/adminManageVenue.html
+++ b/app/templates/adminPart/adminManageVenue.html
@@ -24,7 +24,7 @@
                     <input type="text" name="venueNumber" value="{{ venueNumber_text }}" required><br>
 
                     <label>Venue Floor</label>
-                    <select name="venueFloor" value="{{ venueFloor_text }}" required>
+                    <select name="venueFloor" required>
                         <option value="" disabled selected>Venue Floor</option>
                         <option value="FLOOR 2">FLOOR 2</option>
                         <option value="FLOOR 3">FLOOR 3</option>
@@ -39,7 +39,7 @@
                     <input type="number" name="venueCapacity" value="{{ venueCapacity_text }}" required><br>
 
                     <label>Venue Status</label>
-                    <select name="venueStatus" value="{{ venueStatus_text }}" required>
+                    <select name="venueStatus" required>
                         <option value="" disabled selected>Venue Current Status</option>
                         <option value="AVAILABLE">AVAILABLE</option>
                         <option value="UNAVAILABLE">UNAVAILABLE</option>
