--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -80,21 +80,49 @@
                     <input type="time" id="endTime" name="endTime" value="{{ endTime_text }}" min="08:00" max="20:00" required><br>
 
                     <label>Program Code</label>
-                    <input type="text" name="programCode" value="{{ programCode_text }}" required><br>
+                    <select name="programCode" required>
+                        <option value="" disabled selected>Select Program Code</option>
+                        {% for dept in department_data %}
+                            <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                            </option>
+                        {% endfor %}
+                    </select><br>
                     
                     <label>Course/Section</label>
-                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required>
+                    <select name="courseSection" required>
+                        <option value="" disabled selected>Select Course Section</option>
+                        {% for course in course_data %}
+                            <option value="{{ course.courseCodeSection }}">
+                                {{ course.courseCodeSection }}
+                            </option>
+                        {% endfor %}
+                    </select>
                 </div>
 
                 <div class="form-right">
                     <label>Lecturer</label>
-                    <input type="text" name="lecturer" value="{{ lecturer_text }}" required><br>
+                    <select name="lecturer" required>
+                        <option value="" disabled selected>Select Lecturer</option>
+                        {% for lecturer in lecturer_data %}
+                            <option value="{{ lecturer.userName }}">
+                                {{ lecturer.userName }}
+                            </option>
+                        {% endfor %}
+                    </select><br>
 
                     <label>No. of Students</label>
                     <input type="number" name="student" value="{{ student_text }}" required><br>
 
                     <label>Venue</label>
-                    <input type="text" name="venue" value="{{ venue_text }}" required>
+                    <select name="venue" required>
+                        <option value="" disabled selected>Select Venue</option>
+                        {% for venue in venue_data %}
+                            <option value="{{ venue.venueNumber }}">
+                                {{ venue.venueNumber }}
+                            </option>
+                        {% endfor %}
+                    </select>
                 </div>
             </div>
 
