--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -21,7 +21,7 @@
 
     <!-- Upload Form -->
     <form id="uploadForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-        <div id="uploadSection" class="function-frame">
+        <div id="uploadSection" class="functi   on-frame">
             <div class="form-left" style="width: 100%">
                 <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="course_list">
@@ -63,7 +63,7 @@
 
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
-        <div id="manualSection" class="function-frame">
+        <div id="manualSection" class="profile-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
