--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -16,7 +16,7 @@
 
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageDepartment') }}" method="POST">
-        <div id="manualSection" class="function-frame">
+        <div id="manualSection" class="function-frame" style="width:100%">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
