--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -61,7 +61,7 @@
 
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
-        <div id="manualSection" class="function-frame">
+        <div id="manualSection" class="function-frame" style="width:100%">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
