--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -95,7 +95,7 @@
                     <select name="courseSection" id="courseSection" required>
                         <option value="" disabled selected>Select Course Section</option>
                         {% for course in course_data %}
-                            <option value="{{ course.courseCodeSection }}">
+                            <option value="({{ course.courseCodeSection }}) - {{ course.courseName }}">
                                 {{ course.courseCodeSection }}
                             </option>
                         {% endfor %}
