--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -67,14 +67,14 @@
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
-                    <label>Exam Date</label>
-                    <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}" required><br>
-
-                    <label>Exam Day</label>
-                    <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly><br>
+                    <label>Exam Date and Day</label>
+                    <div style="display: flex; gap: 2%">
+                        <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}" required>
+                        <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly><br>
+                    </div>
 
                     <label>Start Time and End Time</label>
-                    <div style="display: flex; gap: 5px;">
+                    <div style="display: flex; gap: 2%;">
                         <input type="time" id="startTime" name="startTime" value="{{ startTime_text }}" min="08:00" max="20:00" required>
                         <span>to</span>
                         <input type="time" id="endTime" name="endTime" value="{{ endTime_text }}" min="08:00" max="20:00" required>
