--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -60,7 +60,7 @@
     </form>
 
     <!-- Manual Form -->
-    <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
+    <form id="manualForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" style="display: none;">
         <div id="manualSection" class="function-frame" style="width:100%">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
