--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -19,7 +19,7 @@
     </div>
 
         <!-- Upload Form -->
-    <form id="uploadForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
+    <form id="uploadForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" enctype="multipart/form-data">
         <div id="uploadSection" class="function-frame">
             <div class="form-left" style="width: 100%">
                 <h4 style="text-align: center;">File Upload Section</h4>
