--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -10,10 +10,10 @@
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
-                <input type="text" name="username" value="{{ admin_name }}" readonly><br><br>
+                <input type="text" name="username" value="{{ admin_name }}" readonly><br>
                 
                 <label>Staff ID</label>
-                <input type="text" name="userid" value="{{ admin_id }}" readonly><br><br>
+                <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
 
                 <label>Email Address</label>
                 <input type="text" name="email" value="{{ admin_email }}" readonly>
@@ -21,10 +21,10 @@
 
             <div class="form-middle">
                 <label>Gender</label>
-                <input type="text" name="gender" value="{{ admin_gender }}" readonly><br><br>
+                <input type="text" name="gender" value="{{ admin_gender }}" readonly><br>
 
                 <label>Role Based</label>
-                <input type="text" name="role", value="{{ admin_role_text}}" readonly><br><br>
+                <input type="text" name="role", value="{{ admin_role_text}}" readonly><br>
 
                 <label>Department</label>
                 <input type="text" name="department", value="{{ admin_department_text}}" readonly>
@@ -32,7 +32,7 @@
 
             <div class="form-right">
                 <label>Contact Number (Editable)</label>
-                <input type="tel" name="contact" value="{{ admin_contact_text }}" required><br><br>
+                <input type="tel" name="contact" value="{{ admin_contact_text }}" required><br>
 
                 <div class="password-container">
                     <label>Password (Editable)</label> 
@@ -40,7 +40,7 @@
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
-                </div><br><br>
+                </div><br>
 
                 <div class="password-container">
                     <label> Confirm Password (Editable)</label>
