--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -5,7 +5,7 @@
     <h2>Profile</h2>
     <form method="post">
         <label>Now display out the contact number value, everytime click on the button will show 'Similar Contact Number Update'</label><br>
-        <label>Does allow admin to change their department? Only admin able to change</label><br>
+        <label>Does allow admin to change their department? Only admin able to change</label><br><br><br>
 
         <div class="profile-frame">
             <div class="form-left">
