--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -32,11 +32,11 @@
 
             <div class="form-right">
                 <label>Contact Number (Editable)</label>
-                <input type="tel" name="contact" value="{{ admin_contact_text }}" required><br>
+                <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>
 
                 <div class="password-container">
                     <label>Password (Editable)</label> 
-                    <input type="password" name="password1" value="{{ admin_password1_text }}" required>
+                    <input type="password" name="password1" value="{{ admin_password1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
@@ -44,7 +44,7 @@
 
                 <div class="password-container">
                     <label> Confirm Password (Editable)</label>
-                    <input type="password" name="password2" value="{{ admin_password2_text }}" required>
+                    <input type="password" name="password2" value="{{ admin_password2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
