--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -26,8 +26,8 @@
                 <label for="lecturer_list">
                     <div class="upload-container" id="lecturerUploadContainer">
                         <div class="upload-text">
-                            Upload a file with an empty first row. Data should start from columns A to F,<br> 
-                            labeled as: 'Id', 'Name', 'Department', 'Role', 'Email', and 'Contact'<br><br><br>
+                            Upload a file with an empty first row. Data should start from columns A to G,<br> 
+                            labeled as: 'Id', 'Name', 'Department', 'Role', 'Email', 'Contact', and 'Gender'<br><br><br>
                             Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
