--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -25,8 +25,8 @@
                 <label for="exam_list">
                     <div class="upload-container" id="examUploadContainer">
                         <div class="upload-text">
-                            Upload a file with an empty first row. Data should start from columns A to I,<br> 
-                            labeled as: 'Date', 'Day', 'Start', 'End', 'Program', 'Course/Sec', 'Lecturer', 'No Of', and 'Room'<br><br><br>
+                            Upload a file with an empty first row. Data should start from columns A to J,<br> 
+                            labeled as: ['date', 'day', 'start', 'end', 'program', 'course/sec', 'pratical lecturer', 'tutorial lecturer', 'no of', 'room']<br><br><br>
                             Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
@@ -70,6 +70,7 @@
                     <label>Exam Date and Day</label>
                     <div style="display: flex; gap: 2%">
                         <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}" required>
+                        <span>&</span>
                         <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly>
                     </div><br>
 
@@ -78,10 +79,8 @@
                         <input type="time" id="startTime" name="startTime" value="{{ startTime_text }}" min="08:00" max="20:00" required>
                         <span>to</span>
                         <input type="time" id="endTime" name="endTime" value="{{ endTime_text }}" min="08:00" max="20:00" required>
-                    </div>
-                </div>
+                    </div><br>
 
-                <div class="form-middle">
                     <label>Program Code</label>
                     <select name="programCode" id="programCode" required>
                         <option value="" disabled selected>Select Program Code</option>
@@ -90,8 +89,10 @@
                                 ({{ dept.departmentCode }}) {{ dept.departmentName }}
                             </option>
                         {% endfor %}
-                    </select><br>
-                    
+                    </select>
+                </div>
+
+                <div class="form-middle">
                     <label>Course/Section</label>
                     <select name="courseSection" id="courseSection" required>
                         <option value="" disabled selected>Select Course Section</option>
@@ -101,24 +102,20 @@
                             </option>
                         {% endfor %}
                     </select>
-                </div>
+
+                    <label>Course Practical Lecturer</label>
+                    <input type="text" name="practicalLecturer" value="{ practicalLecturer_text }" readonly><br>
+
+                    <label>Course Tutorial Lecturer</label>
+                    <input type="text" name="tutorialLecturer" value="{ tutorialLecturer_text }" readonly><br>
+                </div> 
 
                 <div class="form-right">
-                    <label>Course Lecturer</label>
-                    <select name="lecturer" required>
-                        <option value="" disabled selected>Select Lecturer</option>
-                        {% for lecturer in lecturer_data %}
-                            <option value="{{ lecturer.userName }}">
-                                {{ lecturer.userName }}
-                            </option>
-                        {% endfor %}
-                    </select><br>
-
                     <label>No. of Students</label>
                     <input type="number" name="student" value="{{ student_text }}" required><br>
 
                     <label>Venue</label>
-                    <select name="venue" required>
+                    <select name="venue" id="venueSection" required>
                         <option value="" disabled selected>Select Venue</option>
                         {% for venue in venue_data %}
                             <option value="{{ venue.venueNumber }}">
