--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -143,6 +143,7 @@
                     <th>Department</th>
                     <th>Practical Lecturer</th>
                     <th>Tutorial Lecturer</th>
+                    <th>No. of Students</th>
                 </tr>
             </thead>
             <tbody>
@@ -156,6 +157,7 @@
                     <td>{{ row.courseDepartment }}</td>
                     <td>{{ row.coursePractical }}</td>
                     <td>{{ row.courseTutorial }}</td>
+                    <td>{{ row.courseStudents }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
