--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -157,7 +157,7 @@
                     <td>{{ row.courseDepartment }}</td>
                     <td>{{ row.coursePractical }}</td>
                     <td>{{ row.courseTutorial }}</td>
-                    <td>{{ row.courseStudents }}</td>
+                    <td>{{ row.courseStudent }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
