--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -26,7 +26,7 @@
                     <div class="upload-container" id="examUploadContainer">
                         <div class="upload-text">
                             Upload a file with an empty first row. Data should start from columns A to J,<br> 
-                            labeled as: ['date', 'day', 'start', 'end', 'program', 'course/sec', 'pratical lecturer', 'tutorial lecturer', 'no of', 'room']<br><br><br>
+                            labeled as: ['date', 'day', 'start', 'end', 'program', 'course/sec', 'practical lecturer', 'tutorial lecturer', 'no of', 'room']<br><br><br>
                             Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
