--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -104,15 +104,15 @@
                     </select><br>
 
                     <label>Course Practical Lecturer</label>
-                    <input type="text" id="practicalLecturer" name="practicalLecturer" value="{{ course.coursePractical }}" readonly><br>
+                    <input type="text" id="practicalLecturer" name="practicalLecturer" value="{{ practicalLecturer_text }}" readonly><br>
 
                     <label>Course Tutorial Lecturer</label>
-                    <input type="text" id="tutorialLecturer" name="tutorialLecturer" value="{{ course.courseTutorial }}" readonly>
+                    <input type="text" id="tutorialLecturer" name="tutorialLecturer" value="{{ tutorialLecturer_text }}" readonly>
                 </div> 
 
                 <div class="form-right">
                     <label>No. of Students</label>
-                    <input type="number" id="student" name="student" value="{{ course.courseStudent }}" readonly><br>
+                    <input type="number" id="student" name="student" value="{{ student_text }}" readonly><br>
 
                     <label>Venue</label>
                     <select name="venue" id="venueSection" required>
